# OPTO

challenge/Presentation/: alt.typ  main.typ  style.typ
challenge/Presentation/guion/: agus-guion_presentacion_es.md
challenge/Presentation/slides/0_cover/: slide_00.typ
challenge/report/: cover.typ  main.typ
challenge/report/chap/: 10_evaluation.typ  1_introduction.typ  2_requirements.typ  3_architecture.typ  4_front-end.typ  5_acquisition.typ  6_FPGA.typ  7_power_supply.typ  8_data_handling.typ  9_verification.typ  FPGA.typ  acquisition.typ  front-end.typ  introduction.typ  power_supply.typ  verification.typ
challenge/report/lib/: style.typ
lab/labview-files/session-1/: exercise4_arraysine.vi  exercise5_intrument.vi  exercise6_readAI_samples.vi  exercise7_readAI_samplesloop.vi
lab/labview-files/session-4/vi/: E1.vi  (+1 more)
lab/micro-mic/: .gitignore  README.md  docker-compose.yml  flake.nix
lab/micro-mic/firmware/: Cargo.toml  memory.x
lab/micro-mic/firmware/src/: analog.rs  audio.rs  clock_capture.rs  config.rs  main.rs  net.rs  pdm.rs  telemetry.rs  timebase.rs
lab/micro-mic/middleware/: Dockerfile  package.json  server.js
lab/micro-mic/prometheus/: prometheus.yml
lab/micro-mic/report/: main.typ
lab/micro-mic/sample/m4/: Cargo.toml  build.rs  memory.x
lab/micro-mic/sample/m4/src/: main.rs
lab/micro-mic/visualizer/: main.py
lab/report/: acronym.typ  cover.typ  main.typ
lab/report/chap/: at_home.typ  self_evaluation.typ  sesion_1.typ  sesion_2.typ  sesion_3.typ  sesion_4.typ  summary.typ
lab/report/lib/: style.typ
labview-files/session-1/: exercise1_firstvi_subvi.vi  exercise2_firstvi_subvi.vi  exercise3_arraysine.vi  exercise3_paintsine.vi  lab1.aliases  lab1.lvproj
report/: main.typ
report/chap/: sesion_1.typ  sesion_2.typ  sesion_3.typ  sesion_4.typ
(+34 files in other folders)
